# Kernel_RL

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md  dependencies.py  docker-compose.gpu.yml  docker-compose.yml  docker-run.sh  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  run_deconv.py  setup_demo.py
.devcontainer/: devcontainer.json
configs/: cohort20_same_noise_fwhm.yaml  one_patient_multi_fwhm.yaml  one_patient_multi_noise_levels.yaml  one_patient_multi_noise_realisations.yaml
docker/: Dockerfile  README.md  verify.sh
docs/: GETTING-STARTED.md  METHODS.md  README.md
docs/reference/: NO_SIRF_NEEDED.md  QUICKSTART.md  REFACTORING_SUMMARY.md  SIRF_VS_CIL.md  STRUCTURE.md
obsolete/: run_deconv.py  run_deconv_kl_comparison.py  setup_demo.py
scripts/: README.md  benchmark_kernel_performance.py  brainweb_batch_runner.py  example_reconstruction.py  example_spheres_reconstruction.py  find_lowest_nrmse.py  manual_kernel_operator.py  poster.py  run_deconv_sweeps.py  test_alignment.py
src/: __init__.py  deconv_cli.py  gaussian_blurring.py  gpu_utils.py  kernel_operator.py  map_rl.py  my_kem.py  test_blurring_operators.py  test_kernel_operators.py  utils.py
src/krl/: __init__.py  callbacks.py  utils.py
src/krl/algorithms/: __init__.py  lbfgsb.py  maprl.py  richardson_lucy.py
src/krl/cli/: __init__.py  config.py  run_deconv.py
src/krl/operators/: __init__.py  blurring.py  directional.py  gpu_kernel_operator.py  gradient.py  kernel.py  kernel_operator.py  kernel_operator_backup.py
tests/: conftest.py  test_cuda_fallback.py  test_directional_maprl_krl.py  test_gpu_kernel_operator.py  test_gradient_directional_maprl.py  test_hybrid_freezing.py  test_kernel_operator.py  test_nifti_io.py  test_preconditioner.py
